sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:4: error: not found: value k
  while (k<lgr){
         ^AlgGnomeSort:5: error: not found: value i
    if (!plusPetit(i,i+1)){
                   ^AlgGnomeSort:5: error: not found: value i
    if (!plusPetit(i,i+1)){
                     ^AlgGnomeSort:6: error: not found: value i
      echange(i,i+1)
              ^AlgGnomeSort:6: error: not found: value i
      echange(i,i+1)
                ^AlgGnomeSort:8: error: not found: value i
    else if (plusPetit(i,i+1)){
                       ^AlgGnomeSort:8: error: not found: value i
    else if (plusPetit(i,i+1)){
                         ^AlgGnomeSort:9: error: not found: value k
      k+=1
      ^