sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var lgr=getNombreValeurs()-1
  while (k<lgr){
    if (!plusPetit(i,i+1)){
      echange(i,i+1)
    }
    else if (plusPetit(i,i+1)){
      k+=1
    }
  }
}